@@ -22,10 +22,5 @@ override_dh_fixperms:
 	chmod -x debian/plasma-workspace/etc/xdg/autostart/klipper.desktop
 	dh_fixperms
 
-override_dh_install:
-	mkdir -p debian/plasma-workspace/usr/share/lightdm/lightdm.conf.d/
-	cp debian/40-kde-plasma-kf5.conf debian/plasma-workspace/usr/share/lightdm/lightdm.conf.d/
-	dh_install
-
 override_dh_gencontrol: l10npkgs_firstversion_ok libpkgs_gen_strict_local_shlibs
 	dh_gencontrol
